# luizalabs-bootcamp-python

./: desafio.py
api-bancaria/: api_bancaria.db  database.py  main.py  pyproject.toml
api-bancaria/accounts/: controller.py  model.py  schema.py  service.py
api-bancaria/auth/: controller.py  model.py  schema.py  service.py
api-bancaria/core/: security.py
api-bancaria/transactions/: controller.py  model.py  schema.py  service.py
banco-de-dados/: dbapi.py  meu_banco.db  transacao.py
copilot/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py
dio-blog/: blog.db  main.py  pyproject.toml  security.py
dio-blog/controllers/: auth.py  post.py
dio-blog/models/: post.py
dio-blog/schemas/: auth.py  post.py
dio-blog/src/: database.py
dio-blog/src/controllers/: post.py
dio-blog/src/models/: post.py
dio-blog/src/schemas/: post.py
dio-blog/src/services/: post.py
dio-blog/tests/: conftest.py
dio-blog/tests/integration/controllers/auth/: test_login.py
dio-blog/tests/integration/controllers/post/: test_create_post.py  test_delete_post.py  test_read_all.py  test_read_post.py  test_update_post.py
dio-blog/views/: auth.py  post.py
sistema-bancario/: desafio_v2.py
sqlalchemy-integration/: pyproject.toml  sqlAlchemyApplication.py  sqlAlchemyCoreApplication.py
workoutapi/: Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  routers.py
workoutapi/alembic/: env.py
workoutapi/alembic/versions/: 0c1aaa4950f4_add_created_at_to_atletas.py  2b6f1f76ec23_init_db.py  edcea4118820_init_db.py
workoutapi/atleta/: controller.py  models.py  schemas.py
workoutapi/categorias/: controller.py  models.py  schemas.py
workoutapi/centro_treinamento/: controller.py  models.py  schemas.py
workoutapi/configs/: database.py
workoutapi/contrib/: schemas.py
