[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor",email = "vitordeazambuja@edu.uniube.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
