[project]
name = "dio-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitor",email = "vitordeazambuja@edu.uniube.br"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "databases[aiosqlite] (>=0.9.0,<0.10.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
